load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache License 2.0

ng_module(
    name = "metrics_overlay",
    srcs = [
        "index.ts",
        "metrics_overlay.ts",
        "metrics_overlay_module.ts",
    ],
    assets = [
        "metrics_overlay.css",
        "metrics_overlay.ng.html",
        "dialog_metrics_help.ng.html",
    ],
    deps = [
        "//client/app/models",
        "//client/app/services",
        "//client/app/util",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@types/node",
        "@npm//d3",
        "@npm//rxjs",
    ],
)

ng_module(
    name = "metrics_overlay_tests",
    testonly = True,
    srcs = [
        "metrics_overlay_test.ts",
    ],
    deps = [
        ":metrics_overlay",
        "//client/app/heatmap",
        "//client/app/models",
        "//client/app/services",
        "//client/app/util",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//d3",
        "@npm//rxjs",
    ],
)
